[package]
name = "web-transport-tauri"
version = "0.1.0"
authors = ["Luke Curley <kixelated@gmail.com>"]
description = "A polyfill for WebTransport when using Tauri."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "web-transport-tauri"

[dependencies]
bytes = { version = "1", features = ["serde"] }
hex = "0.4.3"
serde = "1.0"
tauri = { version = "2.5.0" }
thiserror = "2"
web-transport = "0.9"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
